--- a/dev/static_files/assignments/assignment_03_preview.html
+++ b/dev/static_files/assignments/assignment_03_preview.html
@@ -13337,29 +13337,183 @@ A pre-trained model can extract the features of an image itself. So at first, pl
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="2.-Sequence-to-Sequence-model-with-BERT-pre-trained-embedding">2. Sequence to Sequence model with BERT pre-trained embedding<a class="anchor-link" href="#2.-Sequence-to-Sequence-model-with-BERT-pre-trained-embedding">&#182;</a></h1>
+<h1 id="2.-BERT-and-Word-Sense-Disambiguation">2. BERT and Word Sense Disambiguation<a class="anchor-link" href="#2.-BERT-and-Word-Sense-Disambiguation">&#182;</a></h1>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>In this task, you are going to build a sequence to sequence model by feeding English words into your model and predicting French words. There are some criteria that you must consider:</p>
+<p>In computational linguistics, word-sense disambiguation (WSD) is an open problem concerned with identifying which sense of a word is used in a sentence. Imagine a bank of water, or a bank which accepts deposits. You can distinguish these two "banks" easily because you understand the context of the sentence which is used for it. What if we want to distinguish senses of a word automatically? You have learned about word embeddings and W2V from the <a href="https://iust-deep-learning.github.io/981/assignments/01_mlp_and_preprocessing">first assignment</a>. W2V extracts a unique vector that is a representation of that word. That is sufficiant we are going distinguish between two different words, such as "Hi" and "Bye"; but we cannot purely depend on it when we want to distinguish between a specific word with several senses.</p>
+<p>Researchers have developed several methods for tackling this issue. One of these techniques named DeConf is proposed by your professor, Dr. Pilehvar. He tackled this problem by de-conflating the representations of words based on the deep knowledge it derives from a semantic network. You can read the complete paper <a href="https://arxiv.org/abs/1608.01961">here</a>. Besides, A full survey about WSD is available <a href="https://www.researchgate.net/publication/220566219_Word_Sense_Disambiguation_A_Survey">here</a>.</p>
+<p>In this task, we are going to distinguish between two senses of the word (noun) "bat" using <a href="https://arxiv.org/abs/1810.04805">BERT</a>. BERT is a context-aware language representation model that can produce different vectors for a specific word according to the context of the sentence.</p>
+<p>According to <a href="https://dictionary.cambridge.org/dictionary/english/bat">Cambridge dictionary</a>, "bat" has two meanings:</p>
 <ol>
-<li><p>You <strong>must</strong> use BERT embedding for the input data. We encourage you to convert words to an embedding vector using <a href="https://github.com/hanxiao/bert-as-service">this</a> repository. The mentioned service helps you to convert your sentences into vectors, which represents the words with respect to the context of the sentence. You can learn more about BERT <a href="https://arxiv.org/abs/1810.04805">here</a>.</p>
+<li><p>A specially shaped piece of wood used for hitting the ball in some games (cricket bat)</p>
 </li>
-<li><p>You have learned about building a character-level sequence to sequence model in the <a href="https://iust-deep-learning.github.io/981/practical/">practical class</a>. For your homework, you <strong>must</strong> build a word-level sequence to sequence model.</p>
-</li>
-<li><p>For the output of the model, a simple method of extracting the next word is converting the target words into one-hot encoding and predicting using a dense layer after the decoder part. We also welcome creative methods, such as building a method that can use the BERT pre-trained embedding as the label of target data. The crucial part is that your model must work in a rational way.</p>
-</li>
-<li><p>After training the model, you <strong>must</strong> use the prediction and test some samples, as it was provided in your practical class notebook.</p>
-</li>
-<li><p>Remember saving all of your trained models under the path 'ASSIGNMENT_PATH /'.</p>
+<li><p>A small animal like a mouse with wings that flies at night (mammal bat)</p>
 </li>
 </ol>
 
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>We use two simple datasets for our task. First, cricketbat.txt, which contains few sentences referring to bat used in cricket sport, and second, vampirebat.txt, which contains few sentences referring to the mammal bird bat. These datasets are available in <a href="https://github.com/omkar-dsd/mini_projects/tree/master/word_sense_disambiuation">this</a> repository, which is used for another WSD approach using <a href="https://wordnet.princeton.edu/">Wordnet</a>. The full explanation of WSD using this method is available <a href="https://towardsdatascience.com/a-simple-word-sense-disambiguation-application-3ca645c56357">here</a>.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[0]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Download and load the datasets here. Then, separate and lower the sentences and insert them in a list.</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Now, we use BERT to encode words of these datasets. You can use <a href="https://github.com/hanxiao/bert-as-service">this</a> repository to extract word embeddings of the sentences. Use BERT-Base, Uncased as your pre-trained BERT model. Then, insert the vectors of all words with root "bat" in another list for each dataset.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[0]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Use bert to extract the embeddings of &quot;bat&quot;s.</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Now, you need to find a specific embedding for each sense of the "bat". A simple approach is averaging all "bat" vectors of each document. Then, you should calculate the distance between the BERT embedding of "bat" in our test cases with your document "bat"s.</p>
+<p>Hint: <a href="https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.linalg.norm.html">This</a> function may be useful.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[0]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">test_cases</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;bats are mammals&quot;</span><span class="p">,</span><span class="s2">&quot;bats breed&quot;</span><span class="p">,</span><span class="s2">&quot;bats are used to play cricket&quot;</span><span class="p">,</span> <span class="s2">&quot;which bat has handle?&quot;</span><span class="p">,</span><span class="s2">&quot;bats can fly&quot;</span><span class="p">]</span>
+<span class="n">test_labels</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;mammal bat&quot;</span><span class="p">,</span><span class="s2">&quot;mammal bat&quot;</span><span class="p">,</span><span class="s2">&quot;cricket bat&quot;</span><span class="p">,</span><span class="s2">&quot;cricket bat&quot;</span><span class="p">,</span><span class="s2">&quot;mammal bat&quot;</span><span class="p">]</span>
+
+<span class="n">your_labels</span> <span class="o">=</span> <span class="p">[]</span>
+
+<span class="c1">#fill your labels with the &quot;bat&quot; with minimum distance to the test case</span>
+
+<span class="k">assert</span> <span class="n">test_labels</span><span class="o">==</span><span class="n">your_labels</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Hmm... It makes sense. Let's see what you produced. You should use <a href="https://en.wikipedia.org/wiki/Principal_component_analysis">PCA</a> to compress the 768 dimensions of BERT embeddings into just 2 dimensions. Then, use matplotlib to visualize them.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[0]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
+<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="kn">from</span> <span class="nn">sklearn.decomposition</span> <span class="k">import</span> <span class="n">PCA</span><span class="p">,</span> <span class="n">TruncatedSVD</span>
+
+<span class="c1"># make a list of embeddings like this: [ALL_CRICKET_BAT_EMBEDDINGS,ALL_MAMMAL_BAT_EMBEDDINGS,AVERAGE_CRICKET_BAT_EMBEDDING,AVERAGE_MAMMAL_BAT_EMBEDDING,ALL_TEST_BAT_EMBEDDINS]</span>
+<span class="n">vec_all</span> <span class="o">=</span> <span class="p">[]</span>
+<span class="n">pca</span> <span class="o">=</span> <span class="n">TruncatedSVD</span><span class="p">(</span><span class="n">n_components</span><span class="o">=</span><span class="mi">2</span><span class="p">)</span>
+<span class="n">principalComponents</span> <span class="o">=</span> <span class="n">pca</span><span class="o">.</span><span class="n">fit_transform</span><span class="p">(</span><span class="n">vec_all</span><span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="n">pca</span><span class="o">.</span><span class="n">explained_variance_ratio_</span><span class="p">)</span>
+<span class="n">principalDf</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">principalComponents</span>
+                           <span class="p">,</span> <span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;principal component 1&#39;</span><span class="p">,</span> <span class="s1">&#39;principal component 2&#39;</span><span class="p">])</span>
+
+
+
+<span class="c1"># make a colors list. use &quot;b&quot; for CRICKET_BATs, &quot;r&quot; for MAMMAL_BATs</span>
+<span class="n">colors</span> <span class="o">=</span><span class="p">[]</span>
+
+<span class="c1">#extract pc1 and pc2 for document bats</span>
+<span class="n">pc1_document</span><span class="o">=</span><span class="p">[]</span>
+<span class="n">pc2_document</span><span class="o">=</span><span class="p">[]</span>
+
+<span class="n">fig</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">8</span><span class="p">,</span> <span class="mi">8</span><span class="p">))</span>
+<span class="n">ax</span> <span class="o">=</span> <span class="n">fig</span><span class="o">.</span><span class="n">add_subplot</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">set_xlabel</span><span class="p">(</span><span class="s1">&#39;Principal Component 1&#39;</span><span class="p">,</span> <span class="n">fontsize</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">set_ylabel</span><span class="p">(</span><span class="s1">&#39;Principal Component 2&#39;</span><span class="p">,</span> <span class="n">fontsize</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
+<span class="k">for</span> <span class="n">pc1</span><span class="p">,</span> <span class="n">pc2</span><span class="p">,</span> <span class="n">color</span> <span class="ow">in</span> <span class="nb">zip</span><span class="p">(</span> <span class="n">pc1_document</span><span class="p">,</span><span class="n">pc2_document</span><span class="p">,</span> <span class="n">colors</span><span class="p">):</span>
+    <span class="n">ax</span><span class="o">.</span><span class="n">scatter</span><span class="p">(</span><span class="n">pc1</span><span class="p">,</span> <span class="n">pc2</span><span class="p">,</span> <span class="n">s</span><span class="o">=</span><span class="mi">50</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="n">color</span><span class="p">)</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">legend</span><span class="p">()</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">grid</span><span class="p">()</span>
+<span class="n">plt</span><span class="o">.</span><span class="n">show</span><span class="p">()</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>It seems that despite this considerable compression, the clusters are distinguishable. Now, for the last part, visualize the average vectors and the test case vectors.</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[0]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#extract pc1 and pc2 for average and test bats</span>
+<span class="n">pc1_remainings</span><span class="o">=</span><span class="p">[]</span>
+<span class="n">pc2_remainings</span><span class="o">=</span><span class="p">[]</span>
+
+<span class="n">colors</span> <span class="o">=</span><span class="p">[</span><span class="s2">&quot;b&quot;</span><span class="p">,</span><span class="s2">&quot;r&quot;</span><span class="p">,</span><span class="s2">&quot;m&quot;</span><span class="p">,</span><span class="s2">&quot;m&quot;</span><span class="p">,</span><span class="s2">&quot;c&quot;</span><span class="p">,</span><span class="s2">&quot;c&quot;</span><span class="p">,</span><span class="s2">&quot;m&quot;</span><span class="p">]</span>
+
+<span class="n">fig</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">8</span><span class="p">,</span> <span class="mi">8</span><span class="p">))</span>
+<span class="n">ax</span> <span class="o">=</span> <span class="n">fig</span><span class="o">.</span><span class="n">add_subplot</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">set_xlabel</span><span class="p">(</span><span class="s1">&#39;Principal Component 1&#39;</span><span class="p">,</span> <span class="n">fontsize</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">set_ylabel</span><span class="p">(</span><span class="s1">&#39;Principal Component 2&#39;</span><span class="p">,</span> <span class="n">fontsize</span><span class="o">=</span><span class="mi">15</span><span class="p">)</span>
+<span class="k">for</span> <span class="n">pc1</span><span class="p">,</span> <span class="n">pc2</span><span class="p">,</span> <span class="n">color</span> <span class="ow">in</span> <span class="nb">zip</span><span class="p">(</span> <span class="n">pc1_remainings</span><span class="p">,</span><span class="n">pc2_remainings</span><span class="p">,</span> <span class="n">colors</span><span class="p">):</span>
+    <span class="n">ax</span><span class="o">.</span><span class="n">scatter</span><span class="p">(</span><span class="n">pc1</span><span class="p">,</span> <span class="n">pc2</span><span class="p">,</span> <span class="n">s</span><span class="o">=</span><span class="mi">50</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="n">color</span><span class="p">)</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">legend</span><span class="p">()</span>
+<span class="n">ax</span><span class="o">.</span><span class="n">grid</span><span class="p">()</span>
+<span class="n">plt</span><span class="o">.</span><span class="n">show</span><span class="p">()</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
